# ansible-web-platform

./: README.md  docker-compose.yml  package.json  quick-start.sh
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/core/: config.py
frontend/: Dockerfile  package.json  tsconfig.json  vite.config.ts
