[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ansible-web-backend"
version = "1.0.0"
description = "Ansible Web管理平台后端"
authors = [{name = "Tech Team"}]
dependencies = [
    "fastapi[all]==0.104.1",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "celery==5.3.4",
    "redis==5.0.1",
    "ansible-core==2.15.0",
    "pyyaml==6.0.1",
    "jinja2==3.1.2",
    "websockets==12.0",
    "python-socketio==5.10.0",
    "docker==6.1.3",
    "cryptography==41.0.7",
    "python-dotenv==1.0.0"
]

[project.optional-dependencies]
dev = [
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true